<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Faso Biz Nèss</string>
    <string name="app_id">bf.fasobizness.bafatech</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="offres_et_annonces">Offres et annonces</string>
    <string name="recrutements">Recrutements</string>
    <string name="communication">Communication</string>
    <string name="suggestions">Suggestions</string>
    <string name="mes_annonces">Mes annonces</string>
    <string name="discussions">Discussions</string>
    <string name="t_lephone_3">Téléphone 3</string>
    <string name="t_lephone_2">Téléphone 2</string>
    <string name="t_lephone_1">Téléphone 1 *</string>
    <string name="prix_facultatif">Prix (Facultatif)</string>
    <string name="offres_en_or">Offres en or</string>
    <string name="boutiques">Boutiques</string>
    <string name="continuer">Continuer</string>
    <string name="code">Code</string>
    <string name="mot_de_passe_requis">Mot de passe requis</string>
    <string name="saisissez_votre_adresse_mail_svp">Saisissez votre adresse email svp</string>
    <string name="adresse_email_invalide">Adresse email invalide</string>
    <string name="adresse_email_requise">Adresse email requise</string>
    <string name="le_code_de_verification_est_requise_pour_continer">Le code de vérification est requise pour continuer</string>
    <string name="nom_d_utlisateur_requis">Nom d\'utilisateur requis</string>
    <string name="nom_requis">Nom requis</string>
    <string name="actualiser">Actualiser</string>
    <string name="infos_pratiques">Infos pratiques</string>
    <string name="haut_de_page">Haut de page</string>
    <string name="suprrimer_l_annonce">Suprrimer l\'annonce</string>
    <string name="nous_venons_d_envoyer_un_code_dauthentification">Nous venons d\'envoyer un code d\'authentification via email à %1$s. Vérifiez dans vos spams si vous ne recevez pas l’email</string>
    <string name="renvoyer_le_code">Renvoyer le code</string>
    <string name="profil">Profil</string>
    <string name="recommander_un_ami">Recommander à un ami</string>
    <string name="rechercher">Rechercher</string>
    <string name="favoris">Favoris</string>
    <string name="ajouter_annonce">Ajouter une annonce</string>
    <string name="veuillez_patienter_pendant_le_chargement">Veuillez patienter svp pendant le chargement</string>
    <string name="pas_d_acces_internet">Pas d\'acces internet</string>
    <string name="aucune_annonce_trouv_e">Aucune annonce trouvée</string>
    <string name="ads">ads</string>
    <string name="vip">VIP</string>
    <string name="connectez_vous_ici">Connectez-vous ici</string>
    <string name="affiche_de_l_annonce">Affiche de l\'annonce</string>
    <string name="ajouter_aux_favoris">Ajouter aux favoris</string>
    <string name="l_annonce_n_existe_plus">L\'annonce n\'existe plus</string>
    <string name="megaphone">Megaphone</string>
    <string name="chargement_en_cours">Chargement en cours</string>
    <string name="signaler_l_annonce">Signaler l\'annonce</string>
    <string name="envoyer_message_direct">Envoyer un message direct</string>
    <string name="voir_plus">Voir plus</string>
    <string name="plus_d_article_de_ce_utilisateur">Plus d\'articles de cet utilisateur</string>
    <string name="avatar_du_vendeur">Avatar du vendeur</string>
    <string name="partager_annonce">Partager (%1$s)</string>
    <string name="derni_re_mise_jour_le_1_s">mise à jour le %1$s</string>
    <string name="description">Description</string>
    <string name="aucune_categorie_renseignee">Aucune catégorie renseignée</string>
    <string name="prix_sur_demande">Prix sur demande</string>
    <string name="remarque_pour_publier_une_annonce_il_faudra_tre_connect_au_pr_alable">Remarque: Pour publier une annonce, il faudra être connecté au préalable.</string>
    <string name="comment_s_inscrire">Comment s\'inscrire</string>
    <string name="telecharger_et_partager_l_application">Téléchargez ou parcourez l\'application Faso Biz Nèss pour en savoir plus. Pour android: http://bit.ly/AndroidFBN.</string>
    <string name="telecharger_et_partager_l_application_recommender">Je t\'invite à découvrir une application gratuite pour publier tes offres, vendre, acheter, et être informé de toutes les opportunités d\'emploi au Burkina. Disponible sur Playstore: http://bit.ly/AndroidFBN</string>
    <string name="comment_publier_une_annonce">Comment publier une annonce ?</string>
    <string name="comment_nous_contacter">Comment nous contacter ?</string>
    <string name="partager_avec">Partager avec</string>
    <string name="annonces">Annonces</string>
    <string name="se_connecter">Se connecter</string>
    <string name="erreur_d_authentiication">Erreur d\'authentiication</string>
    <string name="mot_de_passe_oubli">Mot de passe oublié?</string>
    <string name="pas_de_compte">Pas de compte?</string>
    <string name="s_inscrire_ici">S\'inscrire ici</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="email">Email</string>
    <string name="mot_de_passe_invalide">Mot de passse invalide</string>
    <string name="se_deconnecter">Se déconnecter</string>
    <string name="changer_mot_de_passe">Changer de mot de passe</string>
    <string name="enregistrer">Enregistrer</string>
    <string name="secteur_d_activite">Secteur(s) d\'activité(s)</string>
    <string name="numero_de_telephone">Numéro de Tél (WhatsApp)</string>
    <string name="prenom">Prénom (s)</string>
    <string name="nom">Nom</string>
    <string name="nom_d_utlisateur">Nom d\'utilisateur</string>
    <string name="entrer_un_nom_d_utilisateur_plus_long">Entrer un nom d\'utilisateur plus long</string>
    <string name="secteut_d_activite_requis">Secteur d\'activité requis</string>
    <string name="date_de_naissance_requise">Date de naissance requise</string>
    <string name="partager">Partager</string>
    <string name="affiche_entreprise_la_une">Affiche entreprise à la une</string>
    <string name="entreprise_a_la_une">Entreprises à la une</string>
    <string name="commentaires">Commentaires</string>
    <string name="logo_de_lentreprise">Logo de l\'entreprise</string>
    <string name="publier_le_commentaire">publier le commentaire</string>
    <string name="avatar_de_l_utilisateur">avatar de l\'utilisateur</string>
    <string name="ajouter_un_commentaire">Ajouter un commentaire</string>
    <string name="aucun_message">Aucun message</string>
    <string name="entrer_message">Entrer message</string>
    <string name="affiche_publicitaire">affiche publicitaire</string>
    <string name="details">Détails</string>
    <string name="nouvelle_annonce">Nouvelle annonce</string>
    <string name="titre_de_l_annonce">Titre de l\'annonce *</string>
    <string name="description_de_l_annonce">Description de l\'annonce *</string>
    <string name="publier">Publier</string>
    <string name="publier_annonce">Publier une annonce</string>
    <string name="no_de_tel_requis">Numéro de téléphone requis</string>
    <string name="no_de_tel_invalide">Numéro de téléphone invalide</string>
    <string name="description_annonce_requis">Veuillez entrer une description svp</string>
    <string name="description_de_lannonce_trop_longue">Description trop longue</string>
    <string name="titre_annonce_trop_long">Titre de l\'annonce trop long</string>
    <string name="titre_annonce_requis">Titre de l\'annonce requis</string>
    <string name="publication_en_cours">Publication en cours …</string>
    <string name="error_gif">x or y bound size should be at least %1$dpx and file size should be no more than %2$sM</string>
    <string name="ajouter_photo">Ajouter photo *</string>
    <string name="fermer">Fermer</string>
    <string name="fcfa">FCFA</string>
    <string name="image_jointe">image jointe</string>
    <string name="annuler">Annuler</string>
    <string name="ok">OK</string>
    <string name="connexion">Connexion</string>
    <string name="vous_devez_choisir_une_cat_gorie">Vous devez choisir une catégorie</string>
    <string name="vous_devez_choisir_la_ville">Vous devez choisir la ville</string>
    <string name="vous_devez_ajouter_au_mois_une_image">Vous devez ajouter au moins une image</string>
    <string name="_pourcent">Chargement  %1$s pourcent</string>
    <string name="offer_save_message">Votre offre a été publiée. Elle restera en ligne pendant 365 jours, vous pouvez la modifier ou la supprimer à tout moment</string>
    <string name="succes">Succès</string>
    <string name="le_serveur_est_occupe">Le serveur est occupé</string>
    <string name="entreprises">Entreprises</string>
    <string name="categories">Catégories</string>
    <string name="envoi_en_cours">Envoi en cours</string>
    <string name="favoris_ajoute">Favoris ajouté</string>
    <string name="pieces_jointes">Pieces jointes</string>
    <string name="like_button">Like button</string>
    <string name="une_erreur_sest_produite">Une erreur s\'est produite</string>
    <string name="l_exp_rience_digitale_au_service_de_l_entreprenariat">L’expérience digitale au service de l’entreprenariat</string>
    <string name="publications_x">Publications (%1$s)</string>
    <string name="postuler">Postuler</string>
    <string name="date_de_depot">Date limite de dépôt :</string>
    <string name="heure_de_depot">Heure limite de dépôt :</string>
    <string name="resultats">Resultats (%1$s)</string>
    <string name="recherche_en_cours">Recherche en cours</string>
    <string name="que_recherchez_vous">Que recherchez-vous?</string>
    <string name="aucun_resultat">aucun résultat</string>
    <string name="envoyer">Envoyer</string>
    <string name="vos_suggestions">Vos suggestions</string>
    <string name="envoyez_un_sms">Envoyez un sms</string>
    <string name="appelez_nous">Appelez nous</string>
    <string name="visitez_notre_page_facebook">Visitez notre page facebook</string>
    <string name="contactez_nous_sur_whatsapp">Contactez nous sur whatsapp</string>
    <string name="contactez_nous">Contactez-nous</string>
    <string name="quels_sont_nos_tarifs">Quels sont nos tarifs?</string>
    <string name="raison">Raison</string>
    <string name="signaler">signaler</string>
    <string name="pour_poursuivre_cette_action_vous_devez_vous_connecter_votre_compte_faso_biz_n_ss">Pour poursuivre cette action vous devez vous connecter à votre compte Faso Biz Nèss</string>
    <string name="background">background</string>
    <string name="vous_pouvez_booster_votre_offre_en_la_faisant_ajouter_dans_la_rubrique_offres_en_or_d_s_lors_vous_avez_beaucoup_de_visibilit_et_cela_vous_permet_de_vendre_plus_vite_et_en_plus_grande_quantit_le_label_offre_en_or_appos_sur_votre_offre_vous_distingue_et_maximise_le_succ_s_de_votre_annonce">Vous pouvez booster votre offre en la faisant ajouter dans la rubrique Offres en Or. Dès lors, vous avez beaucoup de visibilité et cela vous permet de vendre plus vite et en plus grande quantité. Le label Offre en Or apposé sur votre Offre vous distingue et maximise le succès de votre annonce.</string>
    <string name="la_souscription_se_fait_moyennant_les_tarifs_suivants">La souscription se fait moyennant les tarifs suivants:</string>
    <string name="label_offre_en_or_pendant_10_jours_5000_fcfa">Label Offre en Or pendant 10 jours: 5000 FCFA</string>
    <string name="label_offre_en_or_pendant_15_jours_7000_fcfa">Label Offre en Or pendant 15 jours: 7000 FCFA</string>
    <string name="label_offre_en_or_pendant_30_jours_15000_fcfa">Label Offre en Or pendant 30 jours: 10000 FCFA</string>
    <string name="label_offre_en_or_pendant_60_jours_15000_fcfa">Label Offre en Or pendant 60 jours: 15000 FCFA</string>
    <string name="espace_emplois">Espace emplois</string>
</resources>