<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--<item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />-->

    <item
        android:id="@+id/nav_ann_search"
        android:icon="@drawable/ic_search_white"
        android:orderInCategory="105"
        android:title="@string/rechercher"
        app:showAsAction="always" />

    <item
        android:id="@+id/nav_favori"
        android:icon="@drawable/ic_star_white"
        android:orderInCategory="100"
        android:title="@string/favoris"
        app:showAsAction="always" />


    <item
        android:id="@+id/navFiltrer"
        android:icon="@drawable/ic_filtre_white"
        android:orderInCategory="101"
        android:title="@string/trier"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/navActualiser"
        android:title="@string/actualiser"
        app:showAsAction="never" />

    <item
        android:id="@+id/navHautPage"
        android:title="@string/haut_de_page"
        app:showAsAction="never" />

</menu>
