<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".fragments.FragmentNotConnected">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/telecharger_et_partager_l_application"
        android:scaleType="fitCenter"
        android:src="@drawable/fbz" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="140dp"
        android:orientation="vertical"
        android:padding="10dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/pour_poursuivre_cette_action_vous_devez_vous_connecter_votre_compte_faso_biz_n_ss"
            android:textAlignment="center" />

        <Button
            android:id="@+id/btn_continuer"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/frame_primary_tiny"
            android:drawableEnd="@drawable/ic_right_arrow_primary"
            android:drawablePadding="6dp"
            android:text="@string/continuer"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>

</FrameLayout>